--- a/sass/_multi-step.scss
+++ b/sass/_multi-step.scss
@@ -40,6 +40,7 @@
       &1 {
         span .error {
           display: inline-block;
+          font-weight: 700;
           color: $primaryStrawberryRed;
         }
 
