feat: steps all done

--- a/sass/_multi-step.scss
+++ b/sass/_multi-step.scss
@@ -116,6 +116,10 @@
               gap: 10px;
             }
 
+            &.checked {
+              background-color: $neutralMagnolia;
+            }
+
             > p {
               color: $primaryPurplishBlue;
             }
