--- a/sass/_multi-step.scss
+++ b/sass/_multi-step.scss
@@ -174,5 +174,25 @@
 
   .confirmation__page {
     display: none;
+    height: 450px;
+    margin: 0 50px;
+    min-height: 100%;
+    & figure {
+      height: inherit;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      figcaption {
+        @include generic-font(32px, 700, normal);
+        margin: 30px 0 15px;
+      }
+
+      p {
+        color: $neutralCoolGray;
+        text-align: center;
+      }
+    }
   }
 }
