--- a/style.css
+++ b/style.css
@@ -362,6 +362,26 @@ a[role=button] {
 }
 .multi-step__container .confirmation__page {
   display: none;
+  height: 450px;
+  margin: 0 50px;
+  min-height: 100%;
+}
+.multi-step__container .confirmation__page figure {
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.multi-step__container .confirmation__page figure figcaption {
+  font-size: 32px;
+  font-weight: 700;
+  text-transform: normal;
+  margin: 30px 0 15px;
+}
+.multi-step__container .confirmation__page figure p {
+  color: hsl(231, 11%, 63%);
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
