--- a/sass/_default.scss
+++ b/sass/_default.scss
@@ -22,4 +22,10 @@ main {
   background-color: $neutralWhite;
   border-radius: 15px;
   padding: 15px;
+
+  @media only screen and (max-width: 700px) {
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
 }
