--- a/sass/_multi-step.scss
+++ b/sass/_multi-step.scss
@@ -5,17 +5,32 @@
 
 .multi-step__container {
   width: 700px;
+  max-width: 100%;
+
   form {
     display: flex;
     max-width: 100%;
     margin: 0 50px;
     overflow: hidden;
 
+    @media only screen and (max-width: 700px) {
+      margin: 0 auto;
+      margin-top: -50px;
+      max-width: 90%;
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 20px;
+    }
+
     .step {
       min-width: 100%;
       margin-top: 50px;
       display: flex;
       flex-direction: column;
+
+      @media only screen and (max-width: 700px) {
+        margin-top: 15px;
+      }
 
       h3 {
         @include generic-font(32px, 700, capitalize);
@@ -74,11 +89,29 @@
           display: flex;
           justify-content: space-around;
           width: 100%;
+
+          @media only screen and (max-width: 700px) {
+            flex-direction: column;
+            gap: 10px;
+          }
         }
 
         figure {
           width: 100%;
           @extend %figure;
+
+          @media only screen and (max-width: 700px) {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 20px;
+          }
+
+          .yr-free {
+            display: none;
+            color: $primaryMarineBlue;
+            margin-top: 5px;
+          }
         }
 
         .toggle__container {
@@ -184,6 +217,15 @@
       align-items: center;
       justify-content: center;
 
+      @media only screen and (max-width: 700px) {
+        box-shadow: 3px 5px 10px $neutralLightGray;
+        margin-top: -50px;
+        justify-content: flex-start;
+        padding: 50px 15px 0;
+        background-color: #fff;
+        border-radius: 15px;
+      }
+
       figcaption {
         @include generic-font(32px, 700, normal);
         margin: 30px 0 15px;
@@ -192,6 +234,7 @@
       p {
         color: $neutralCoolGray;
         text-align: center;
+        word-spacing: 1px;
       }
     }
   }
