--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -17,6 +17,16 @@
   background-size: 100%;
   border-radius: 15px;
 
+  @media only screen and (max-width: 700px) {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    border-radius: 0px;
+    width: 100%;
+    height: 150px;
+    background-position: bottom right;
+  }
+
   > div {
     display: flex;
     align-items: center;
@@ -28,6 +38,7 @@
       @include border-mixin($primaryLightBlue, 50%);
       color: #fff;
     }
+
     > span[role="active"] {
       background-color: $primaryLightBlue;
       border: none;
@@ -37,6 +48,10 @@
     > .card__heading {
       @include generic-font(15px, normal, uppercase);
       color: #fff;
+
+      @media only screen and (max-width: 700px) {
+        display: none;
+      }
 
       span {
         display: inline-block;
