refactor: refactored style, make js more readable

--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -24,7 +24,7 @@
     border-radius: 0px;
     width: 100%;
     height: 150px;
-    background-position: bottom right;
+    background-position: center bottom -70px;
   }
 
   > div {
