--- a/sass/_multi-step.scss
+++ b/sass/_multi-step.scss
@@ -57,6 +57,9 @@
           display: inline-block;
           font-weight: 700;
           color: $primaryStrawberryRed;
+          @media only screen and (max-width: 700px) {
+            font-size: 13px;
+          }
         }
 
         > span {
@@ -68,6 +71,7 @@
           div {
             display: flex;
             justify-content: space-between;
+            align-items: center;
           }
 
           input {
